[package]
name = "common"
version = "0.1.0"
authors = ["Polka Biome Ltd. <jihoon@tutanota.de>"]
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-network'
edition = "2021"

[dependencies]
blake2-rfc = { version = "0.2.18", default-features = false }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
currencies = { workspace = true, default-features = false }
fixnum = { workspace = true, default-features = false, features = [
    "i128",
    "parity",
    "scale-info",
    "serde",
] }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
secp256k1 = { version = "0.7", features = [
    'hmac',
], default-features = false, package = "libsecp256k1" }
thiserror = "1.0"
num-traits = { version = "0.2.12", default-features = false }
orml-traits = { workspace = true, default-features = false }
paste = "1.0.0"
pallet-timestamp = { workspace = true, default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0", features = [
    "derive",
], default-features = false }
smallvec = "1.7.0"
strum = { version = "0.25.0", features = ["derive"], default-features = false }
sp-api = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
static_assertions = "1.1.0"
hex-literal = "0.4.1"
env_logger = { version = "0.10.0", optional = true }
bridge-types = { workspace = true, default-features = false }
log = "0.4.20"

[dev-dependencies]
serde_json = "1.0.41"
env_logger = { version = "0.10.0" }

[features]
default = ['std']
std = [
    "bridge-types/std",
    'codec/std',
    "scale-info/std",
    'serde/std',
    'secp256k1/std',
    'rustc-hex/std',
    'blake2-rfc/std',
    'num-traits/std',
    'frame-support/std',
    'frame-system/std',
    'fixnum/std',
    'pallet-timestamp/std',
    'sp-arithmetic/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'currencies/std',
    'orml-traits/std',
]

test = ["env_logger"]

runtime-benchmarks = []

private-net = []
