[package]
name = "contract-extrinsics"
authors = ["Soramitsu"]
license = "BSD-4-Clause"
homepage = "https://sora.org"
repository = 'https://github.com/sora-xor/sora2-network'
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO Update versions
ink = { version = "5.0.0", default-features = false}

sp-std = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "add_sora_substrate_commits", default-features = false }
sp-core = { git = "https://github.com/sora-xor/polkadot-sdk.git", branch = "add_sora_substrate_commits", default-features = false }

[features]
default = ["std"]

std = [
    "sp-core/std",
    "ink/std"
]
