[package]
name = "contract-extrinsics"
authors = ["Soramitsu"]
license = "BSD-4-Clause"
homepage = "https://sora.org"
repository = 'https://github.com/sora-xor/sora2-network'
version = "0.1.0"
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false}

sp-std = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

common = { path = "../common", default-features = false }

[features]
default = ["std"]

std = [
    "sp-runtime/std",
    "common/std",
]
