[package]
name = "contracts"
authors = ["Soramitsu"]
license = "BSD-4-Clause"
homepage = "https://sora.org"
repository = 'https://github.com/sora-xor/sora2-network'
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO Update versions
ink = { version = "4.2.1", default-features = false, features = ["call-runtime"] }

# add to another project: git = "https://github.com/sora-xor/sora2-network.git" branch = "release-x.x.x"
common = { path = "../common", default-features = false }
contract-extrinsics = { path = "../contract-extrinsics", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.38", default-features = false }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale-info/std",
    "sp-runtime/std",
    "common/std",
]